# aquifer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.meter  LICENSE  README.md  aquifer.toml.example  compose.yml  compose.yml.example  docker-entrypoint.sh  pyproject.toml
.github/workflows/: python.yml
src/aquifer/: __init__.py  command_line.py  configuration.py  dashboard.py  database.py  estimation.py  meter.py  precipitation.py  rain.py
src/aquifer/command_line/: __init__.py  meter.py  rain.py  tank.py
tests/: .ruff.toml  __init__.py  test_configuration.py  test_placeholder.py
